--- a/css/formulario_imc.css
+++ b/css/formulario_imc.css
@@ -30,7 +30,7 @@
         } */
       form {
             /* Centrar el formulario en la página */
-            margin: 0 auto;
+            margin: 50px;
             width: 400px;
             /* Esquema del formulario */
             padding: 1em;
