--- a/css/formulario_imc.css
+++ b/css/formulario_imc.css
@@ -37,13 +37,13 @@
             width: 1200px;
             /* Esquema del formulario */
             padding: 1em;
-            border: 1px solid rgb(56, 218, 24);
+            border: 2px solid rgb(56, 218, 24);
             border-radius: 5em;
            }
 
            input:invalid 
            {
-              border: 1px dashed rgb(24, 205, 218);
+              border: 1px dashed solid rgb(24, 205, 218);
             }
            
            /* input:invalid:required 
@@ -63,7 +63,7 @@
             font: 1em sans-serif;
 
             /* Tamaño uniforme del campo de texto */
-            width: 200px;
+            width: 400px;
             box-sizing: border-box;
 
             /* Hacer coincidir los bordes del campo del formulario */
