--- a/css/formulario_imc.css
+++ b/css/formulario_imc.css
@@ -1,6 +1,6 @@
  
        /* body{
-         body {
+         
          <div class="one"><video id="videofondo" class="video-background" poster="https://carontestudio.com/img/contacto.jpg" autoplay="autoplay" no-controls="" muted="muted" loop=""><source src="https://carontestudio.com/img/f1.mp4" type="video/mp4" ;="" codecs="avc1.42E01E, mp4a.40.2"></video></div>
         } 
           background-color: #c91c48b7;
@@ -43,7 +43,7 @@
 
            input:invalid 
            {
-              border: 1px dashed solid rgb(24, 205, 218);
+              border: 1px dashed rgb(24, 205, 218);
             }
            
            /* input:invalid:required 
