--- a/FrontProject_Cycle3-main/css/desing.css
+++ b/FrontProject_Cycle3-main/css/desing.css
@@ -2,30 +2,42 @@ body {
     font-family: sans-serif;
     width: 100%;
     text-transform: uppercase;
-    background: #40576d;
-    background-size: cover;
-    padding: 200px;
+    
+    
 }
 
 .login-form {
     width: 28%;
     margin: 0 auto;
-    background: url(img.captura.PNG)no-repeat 0px 0px;
+    background: url(img.poster.PNG)no-repeat 0px 0px;
     background-size: cover;
     background-position: center;
     padding: 30px 33px 67px;
-    border-top: 6px solid #00c3ff;
+    border-top: 6px solid #15ff00;
     box-shadow: 0px 35px 44px -22px rgba(0, 0, 0, 0.72);
 
 }
 
+video{
+    position: fixed;
+    top: 0;
+    min-width: 100%;
+    min-height: 100vh;
+    z-index: -1;
+    top:50%;
+    left:50%;
+    transform: translateX(-50%) translateY(-50%);
+    
+
+
+}
 h1 {
 text-align: center;
 font: size 26px;
 font-weight: bold;
 margin: top 24px;
 margin: bottom 26px;
-color: #fff;
+color: rgb(6, 252, 26);
 
 }
 
@@ -35,10 +47,11 @@ margin:0 auto;
 }
 
 form p {
-font-size: 15px;
+text-align: center;
+font-size: 25px;
 margin-top: 44px;
 padding:0.3px;
-color: #fff;
+color: rgb(6, 240, 25);
 
 }
 
@@ -52,7 +65,7 @@ color: #fff;
     border: none;
     border-bottom: 1px solid #dccdcf;
     display:block;
-    background: transparent;
+    background: #dccdcf96;
 }
 
 input[type="submit"]{
@@ -65,7 +78,7 @@ padding: 13px 20px;
 font-size: 20px;
 font-weight: bold;
 text-transform: uppercase;
-background: #00c3ff;
+background: #00ff0d;
 border: none;
 color: #fff;
 cursor: pointer;
